# Kroltin

./: .gitignore  INSTALL.md  README.md  TEMPLATES.md  install.sh  pyproject.toml
frontend/: package-lock.json
kroltin/: __init__.py  cli_args.py  core.py  logger.py  packer.py  run.py  settings.py  template_manager.py  templates.json  threaded_cmd.py
kroltin/packer_templates/: Golden-kali-linux_2503.pkr.hcl  build.pkr.hcl  configure.pkr.hcl  kali-linux_2503.pkr.hcl
kroltin/preseed-files/: kali-linux_2503.cfg
kroltin/scripts/: apt-update.sh  change-hostname.sh  download-nessus.sh  enable-kali-desktop-gui.sh  install-guest-addons.sh  install-tailscale.sh  kali-grant-root.sh  randomize-password.sh  start-systemctl-ssh.sh  test.sh
