[project]
name = "kroltin"
version = "0.0.1"
description = "A Command and Control (C2) service for penetration testing"
authors = [
    {name = "Duncan Woosley"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "passlib>=1.7.4",
]

[project.scripts]
kroltin = "kroltin.run:cli"
kroltin-web = "kroltin.run:web"

[tool.setuptools]
packages = ["kroltin"]
include-package-data = true

[tool.setuptools.package-dir]
kroltin = "kroltin"

[tool.setuptools.package-data]
kroltin = [
    "templates.json",
    "packer_templates/*.hcl",
    "packer_templates/*.json",
    "scripts/*.sh",
    "scripts/*.ps1",
    "preseed-files/*.cfg",
    "preseed-files/*.seed",
    "golden_images/*"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"